ptit fixe pour avoir le login sur le tel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1000,7 +1000,9 @@ body {
   .navbar-item:last-child { border: none; }
 
   .navbar-list { display: flex; }
-
+.LogPc{
+  display: none;
+}
   .header .btn {
     display: grid;
     text-align: center;
